--- a/srcs/requirements/nginx/tools/nginx.conf
+++ b/srcs/requirements/nginx/tools/nginx.conf
@@ -1,8 +1,6 @@
-user                            www;
-worker_processes                auto; # it will be determinate automatically by the number of core
-
+worker_processes                auto;
 error_log                       /var/log/nginx/error.log warn;
-#pid                             /var/run/nginx/nginx.pid; # it permit you to use /etc/init.d/nginx reload|restart|stop|start
+pid                             /var/run/nginx/nginx.pid;
 
 events {
     worker_connections          1024;
@@ -11,12 +9,16 @@ events {
 http {
     include                     /etc/nginx/mime.types;
     default_type                application/octet-stream;
-    sendfile                    on;
     access_log                  /var/log/nginx/access.log;
+    sendfile                    on;
     keepalive_timeout           3000;
     server {
-        listen                  80;
+        listen                  443 ssl http2;
+        listen                  [::]:443 ssl http2;
         root                    /www;
+        ssl_certificate_key     /etc/ssl/private/nginx.key;
+        ssl_certificate         /etc/ssl/certs/nginx.crt;
+        ssl_protocols           TLSv1.3;
         index                   index.html index.htm;
         server_name             localhost;
         client_max_body_size    32m;
