implement somewhat working db server

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,9 @@
 FROM alpine:3.18
 
-ENV DB_HOST=mariadb
+ENV DB_HOST=localhost
 ENV DB_NAME=wordpressdb
 ENV DB_USER=oheinzel
-ENV DB_PASS=oheinzel
+ENV DB_PASS=password
 ENV DB_ROOT_PASS=oheinzel
 
 RUN apk update
@@ -11,7 +11,15 @@ RUN apk add mysql mysql-client openrc
 RUN openrc
 RUN touch /run/openrc/softlevel
 
-COPY ./tools/entrypoint.sh /bin/bash/
-RUN chmod +x /bin/bash/setup_db.sh
+COPY ./tools/db_server.cnf /etc/my.cnf.d/
 
-ENTRYPOINT ["sh /bin/bash/setup_db.sh"]
+RUN mkdir -p tmp
+COPY ./tools/setup_db.sh /usr/bin
+COPY ./tools/create_db.sql /tmp/
+RUN chmod +x /usr/bin/setup_db.sh
+RUN chmod +r /tmp/create_db.sql
+
+EXPOSE 3306
+
+ENTRYPOINT ["sh", "/usr/bin/setup_db.sh"]
+
