implement wp-config.php

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,15 +1,6 @@
 FROM alpine:3.18
 
-ENV DB_NAME=wordpressdb
-ENV DB_USER=oheinzel
-ENV DB_PASS=password
-ENV DOMAIN=localhost
-ENV WP_USER=oheinzel
-ENV WP_PASS=password
-ENV WP_EMAIL=ole.paul.heinzelmann@gmail.com
-
 RUN apk update
-RUN apk upgrade
 RUN apk add php php-cli php-fpm php-mysqli php-phar php-openssl
 RUN apk add wget mariadb-client
 
@@ -23,7 +14,11 @@ RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.ph
 RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /usr/local/bin/wp-cli
 
+COPY ./conf/wp-config.php /www/wordpress/
+RUN chmod +r /www/wordpress/wp-config.php
 COPY ./tools/setup_wp.sh /usr/bin/
 RUN chmod +x /usr/bin/setup_wp.sh
+
+EXPOSE 9000
 
 ENTRYPOINT ["sh", "/usr/bin/setup_wp.sh"]
