--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     env_file: .env
     volumes:
       - dbdata:/var/lib/mysql
+    ports:
+      - "3600:3600"
     networks:
       - app-network
 
@@ -22,6 +24,8 @@ services:
     env_file: .env
     volumes:
       - wordpress:/www/html
+    ports:
+      - "9000:9000"
     networks:
       - app-network
 
@@ -40,8 +44,8 @@ services:
       - app-network
 
 volumes:
-  wordpress: /home/login/data/wp
-  dbdata: /home/login/data/mdb
+  wordpress: /home/login/data/wpfiles
+  dbdata: /home/login/data/wpdata
 
 networks:
   app-network:
