fix individual cleaning in Makefile

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,7 +2,7 @@ version: '1.29.2'
 
 services:
   mariadb:
-    build: /requirements/mariadb/
+    build: requirements/mariadb/
     image: mariadb
     container_name: mariadb
     restart: unless-stopped
@@ -15,7 +15,7 @@ services:
       - app-network
 
   wordpress:
-    build: /requirements/nginx/
+    build: requirements/nginx/
     depends_on:
       - mariadb
     image: wordpress
@@ -30,7 +30,7 @@ services:
       - app-network
 
   webserver:
-    build: /requirements/nginx/
+    build: requirements/nginx/
     depends_on:
       - wordpress
     image: nginx
