--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,10 +5,10 @@ RUN apk add mysql mysql-client openrc
 RUN openrc
 RUN touch /run/openrc/softlevel
 
-COPY ./tools/db_server.cnf /etc/my.cnf.d/
+COPY conf/db_server.cnf /etc/my.cnf.d/
 
 RUN mkdir -p tmp
-COPY ./tools/setup_db.sh /usr/bin
+COPY tools/setup_db.sh /usr/bin
 RUN chmod +x /usr/bin/setup_db.sh
 
 EXPOSE 3306
