--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -19,12 +19,18 @@ http {
         ssl_certificate_key     /etc/ssl/private/nginx.key;
         ssl_certificate         /etc/ssl/certs/nginx.crt;
         ssl_protocols           TLSv1.3;
-        index                   index.html index.htm;
-        server_name             localhost;
+        index                   index.php index.html index.htm;
+        server_name             oheinzel.42.fr;
         client_max_body_size    32m;
         error_page              500 502 503 504  /50x.html;
-        location = /50x.html {
-              root              /var/lib/nginx/html;
+        location ~ \.php$ {
+                try_files $uri =404;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass wordpress:9000;
+                fastcgi_index index.php;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param PATH_INFO $fastcgi_path_info;
         }
     }
 }
