--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.18
 
 RUN apk update
-RUN apk add php php-cli php-fpm php-mysqli php-phar php-openssl
+RUN apk add php81 php81-cli php81-fpm php81-mysqli php81-phar php81-openssl
 RUN apk add wget mariadb-client
 
 RUN mkdir -p /www
@@ -19,6 +19,9 @@ RUN chmod +r /www/wordpress/wp-config.php
 COPY tools/setup_wp.sh /usr/bin/
 RUN chmod +x /usr/bin/setup_wp.sh
 
+WORKDIR /www/wordpress/
 EXPOSE 9000
 
-ENTRYPOINT ["sh", "/usr/bin/setup_wp.sh"]
+ENTRYPOINT ["/usr/bin/setup_wp.sh"]
+
+#/etc/php81/php-fpm.d
