--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,11 @@
 FROM alpine:3.18
 
+ENV DB_HOST=mariadb
+ENV DB_NAME=wordpressdb
+ENV DB_USER=oheinzel
+ENV DB_PASS=password
+ENV DB_ROOT=inception
+
 RUN apk update
 RUN apk add mysql mysql-client openrc
 RUN openrc
@@ -13,5 +19,5 @@ RUN chmod +x /usr/bin/setup_db.sh
 
 EXPOSE 3306
 
-ENTRYPOINT ["sh", "/usr/bin/setup_db.sh"]
+ENTRYPOINT ["/usr/bin/setup_db.sh"]
 
