--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,11 +7,11 @@ ENV DB_PASS=password
 ENV DB_ROOT=inception
 
 RUN apk update
-RUN apk add mysql mysql-client openrc
+RUN apk add mariadb mariadb-client openrc
 RUN openrc
 RUN touch /run/openrc/softlevel
 
-COPY conf/db_server.cnf /etc/my.cnf.d/
+COPY conf/mariadb-server.cnf /etc/my.cnf.d/
 
 RUN mkdir -p tmp
 COPY tools/setup_db.sh /usr/bin
