clean docker and conf files

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -10,6 +10,7 @@ RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /usr/local/bin/wp-cli
 RUN wp-cli core download
 
+# RUN sed -i 's/listen = 127.0.0.1:9000/listen = 9000/' /etc/php81/php-fpm.d/www.conf
 COPY conf/wp-config.php /var/www/wordpress/
 COPY conf/www.conf /etc/php81/php-fpm.d/
 COPY tools/setup_wp.sh /usr/bin/
@@ -19,4 +20,3 @@ EXPOSE 9000
 
 ENTRYPOINT ["/usr/bin/setup_wp.sh"]
 
-#/etc/php81/php-fpm.d
