--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -20,12 +20,11 @@ http {
         ssl_certificate         /etc/ssl/certs/nginx.crt;
         ssl_protocols           TLSv1.3;
         server_name             oheinzel.42.fr;
-        index                   index.php index.html index.htm;
+        index                   wp-login.php index.html index.htm;
         client_max_body_size    32m;
         location ~ \.php$ {
                 try_files $uri =404;
                 fastcgi_pass wordpress:9000;
-                fastcgi_index index.php;
                 include fastcgi_params;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
