--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,9 +1,8 @@
 FROM alpine
 
 RUN apk update
-RUN apk add php81 php81-cli php81-fpm php81-mysqli \
-            php81-phar php81-openssl php81-mbstring \
-            wget mariadb-client
+RUN apk add php81 php81-cli php81-fpm php81-mysqli php81-phar php81-openssl php81-mbstring
+RUN apk add wget mariadb-client
 
 WORKDIR /var/www/wordpress
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -11,10 +10,13 @@ RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /usr/local/bin/wp-cli
 RUN wp-cli core download
 
-RUN sed -i '/^listen =.*/c\listen = 9000' /etc/php81/php-fpm.d/www.conf
-RUN sed -i '/^;clear_env =.*/c\clear_env = no' /etc/php81/php-fpm.d/www.conf
 COPY conf/wp-config.php /var/www/wordpress/
+COPY conf/www.conf /etc/php81/php-fpm.d/
 COPY tools/setup_wp.sh /usr/bin/
 RUN chmod +x /usr/bin/setup_wp.sh
 
+EXPOSE 9000
+
 ENTRYPOINT ["/usr/bin/setup_wp.sh"]
+
+#/etc/php81/php-fpm.d
