--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -24,9 +24,12 @@ http {
         client_max_body_size    32m;
         location ~ \.php$ {
                 try_files $uri =404;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
                 fastcgi_pass wordpress:9000;
+                fastcgi_index index.php;
                 include fastcgi_params;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param PATH_INFO $fastcgi_path_info;
         }
     }
 }
